--- a/images/photo-of-day/manifest.json
+++ b/images/photo-of-day/manifest.json
@@ -1,1 +1,80 @@
-[]
+[
+  "000028410007.jpeg",
+  "IMG_0109.jpeg",
+  "IMG_0153.jpeg",
+  "IMG_0230.jpeg",
+  "IMG_0282.jpeg",
+  "IMG_0391.jpeg",
+  "IMG_0823.jpeg",
+  "IMG_0927.jpeg",
+  "IMG_0961.jpeg",
+  "IMG_0968.jpeg",
+  "IMG_1642.jpeg",
+  "IMG_2686.jpeg",
+  "IMG_3643.jpeg",
+  "IMG_3675.jpeg",
+  "IMG_3739.jpeg",
+  "IMG_4801.jpeg",
+  "IMG_4804.jpeg",
+  "IMG_5603.jpeg",
+  "IMG_5626.jpeg",
+  "IMG_5914.jpeg",
+  "IMG_6014.jpeg",
+  "IMG_6160.jpeg",
+  "IMG_6245.jpeg",
+  "IMG_6279.jpeg",
+  "IMG_6294.jpeg",
+  "IMG_6296.jpeg",
+  "IMG_6312.jpeg",
+  "IMG_6317.jpeg",
+  "IMG_6320.jpeg",
+  "IMG_6345.jpeg",
+  "IMG_6368.jpeg",
+  "IMG_6378.jpeg",
+  "IMG_6454.jpeg",
+  "IMG_6505.jpeg",
+  "IMG_6506.jpeg",
+  "IMG_6521.jpeg",
+  "IMG_6573.jpeg",
+  "IMG_6582.jpeg",
+  "IMG_6607.jpeg",
+  "IMG_6609.jpeg",
+  "IMG_6623.jpeg",
+  "IMG_6647.jpeg",
+  "IMG_6880.jpeg",
+  "IMG_7102.jpeg",
+  "IMG_7475.jpeg",
+  "IMG_7480.jpeg",
+  "IMG_7519.jpeg",
+  "IMG_8184.jpeg",
+  "IMG_8263.jpeg",
+  "IMG_8383.jpeg",
+  "IMG_8390.jpeg",
+  "IMG_8400.jpeg",
+  "IMG_8424.jpeg",
+  "IMG_8464.jpeg",
+  "IMG_8474.jpeg",
+  "IMG_8476.jpeg",
+  "IMG_8478.jpeg",
+  "IMG_8486.jpeg",
+  "IMG_8505.jpeg",
+  "IMG_8645.jpeg",
+  "IMG_9215.jpeg",
+  "IMG_9246.jpeg",
+  "IMG_9275.jpeg",
+  "IMG_9488.jpeg",
+  "IMG_9514.jpeg",
+  "IMG_9872.jpeg",
+  "P1190277.JPG",
+  "P1190283.JPG",
+  "P1190339.JPG",
+  "P1190420.JPG",
+  "P1190423.JPG",
+  "P1190436.JPG",
+  "P1190463.JPG",
+  "P1190478.JPG",
+  "P1190499.JPG",
+  "P1190555.JPG",
+  "P1190557.JPG",
+  "P1190567.JPG"
+]
